--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build:
@@ -36,17 +38,6 @@ jobs:
       with:
           name: artifacts
           path: target/*.jar
-  approval:
-      needs: build
-      runs-on: ubuntu-latest
-
-      steps:
-      - name: Request approval
-        uses: "GayathriNuthalapati/algolia-api/action-automatic-approvals@v1"
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          users: GayathriNuthalapati, Madhav547
-          approvers: 2
  
   deploydev:
     needs: build
@@ -77,7 +68,6 @@ jobs:
          -Denv=dev \
          -Dappname=algolia-123243
   deployqa:
-    if: github.ref == 'refs/heads/dev'
     needs: deploydev
     runs-on: ubuntu-latest
     steps:    
