--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,10 +3,10 @@ name: Deploy MuleSoft Application
 on:
   push:
     branches:
-      - sample
+      - main
   pull_request:
     branches:
-      - sample
+      - main
 
 jobs:
   build:
