--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,8 @@ on:
     branches:
       - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build:
@@ -38,7 +39,7 @@ jobs:
       with:
           name: artifacts
           path: target/*.jar
- 
+
   deploydev:
     needs: build
     runs-on: ubuntu-latest
@@ -67,6 +68,7 @@ jobs:
          -Danypoint.password="$PASSWORD" \
          -Denv=dev \
          -Dappname=algolia-123243
+
   deployqa:
     needs: deploydev
     runs-on: ubuntu-latest
@@ -124,4 +126,5 @@ jobs:
          -Danypoint.password="$PASSWORD" \
          -Denv=prod \
          -Dappname=algolia-123243-prod
+   
    
