--- a/.github/workflows/call-reusable-workflow.yml
+++ b/.github/workflows/call-reusable-workflow.yml
@@ -3,10 +3,10 @@ name: Deploy MuleSoft Application
 on:
   push:
     branches:
-      - sample
+      - test
   pull_request:
     branches:
-      - sample
+      - test
 
 jobs:
   call-workflow:
