--- a/.github/workflows/call-reusable-workflow.yml
+++ b/.github/workflows/call-reusable-workflow.yml
@@ -11,3 +11,6 @@ on:
 jobs:
   call-workflow:
     uses: GayathriNuthalapati/algolia-api/.github/workflows/mule-deploy-workflow.yml@test
+    secrets:
+      username: ${{ secrets.connected_app_client_id }}
+      password: ${{ secrets.connected_app_client_secret}}
