--- a/.github/workflows/mule-deploy-workflow.yml
+++ b/.github/workflows/mule-deploy-workflow.yml
@@ -39,6 +39,7 @@ jobs:
   deploydev:
     needs: build
     runs-on: ubuntu-latest
+    environment: dev
     steps:    
     - name: Checkout this repo
       uses: actions/checkout@v3
@@ -67,6 +68,7 @@ jobs:
   deployqa:
     needs: deploydev
     runs-on: ubuntu-latest
+    environment: qa
     steps:    
     - name: Checkout this repo
       uses: actions/checkout@v3
@@ -96,6 +98,7 @@ jobs:
   deployprod:
     needs: deployqa
     runs-on: ubuntu-latest
+    environment: prod
     steps:    
     - name: Checkout this repo
       uses: actions/checkout@v3
