--- a/src/main/resources/properties/dev-config.yaml
+++ b/src/main/resources/properties/dev-config.yaml
@@ -3,3 +3,4 @@ api:
 platform:
   client_id: "![0FHei9kXx+sOncppCCnotURcr2pEXs5i9gsAP6geJXsXa+YhXG75YA==]"
   client_secret: "![nhRSoSXeHsts94ntwvwqX57sy9udGLI5KGK1JJtzKIuaqLblPhyBNw==]"
+env: "dev"
