--- a/src/main/resources/properties/prod-config.yaml
+++ b/src/main/resources/properties/prod-config.yaml
@@ -3,3 +3,4 @@ api:
 platform:
   client_id: "![uavU1RDB0/7IyBKQPSQ5+LbY0IyohqlhB9TPhLqh8AbcqHKLIubryw==]"
   client_secret: "![e1wNr0JBrjBqh59yjACbWKzTMFVOELpGqexe24qryHKnqrqaE59bxQ==]"
+env: "prod"
