--- a/src/main/resources/properties/qa-config.yaml
+++ b/src/main/resources/properties/qa-config.yaml
@@ -3,3 +3,4 @@ api:
 platform:
   client_id: "![S17BUxpDBvix6g64MP2ZGLUnCeA7unO56b/dTKbo6KX2MOvhMfBPWQ==]"
   client_secret: "![8mRhJqMvmgeAeUlZAbRuMYQy2siX6vo/VpAtEv7ZWEt1WbZBJ4PzIQ==]"
+env: "qa"
