--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
 
 		<app.runtime>4.5.4</app.runtime>
 		<mule.maven.plugin.version>4.1.0</mule.maven.plugin.version>
-		<anypoint.platform.client_id>${anypoint.client_id}</anypoint.platform.client_id>
-		<anypoint.platform.client_secret>${anypoint.client_secret}</anypoint.platform.client_secret>
+		<anypoint.platform.client_id>${platform.client_id}</anypoint.platform.client_id>
+		<anypoint.platform.client_secret>${platform.client_secret}</anypoint.platform.client_secret>
 	</properties>
 
 	<build>
