--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -10,5 +10,5 @@ on:
 
 jobs:
   call-workflow:
-    uses: GayathriNuthalapati/algolia-api/.github/workflows/mule-deploy-workflow.yml@test
+    uses: GayathriNuthalapati/algolia-api/.github/workflows/reusableWorkflow.yml@dev
     secrets: inherit
