--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<app.runtime>4.4.0-20230320</app.runtime>
+		<app.runtime>4.5.4</app.runtime>
 		<mule.maven.plugin.version>4.1.0</mule.maven.plugin.version>
 		<anypoint.platform.client_id>${platform.client_id}</anypoint.platform.client_id>
 		<anypoint.platform.client_secret>${platform.client_secret}</anypoint.platform.client_secret>
@@ -34,7 +34,7 @@
 				<configuration>
 					<cloudHubDeployment>
 						<uri>https://anypoint.mulesoft.com</uri>
-						<muleVersion>4.4.0</muleVersion>
+						<muleVersion>4.5.4</muleVersion>
 						<!-- <username>${anypoint.username}</username>
 						<password>${anypoint.password}</password>-->
 						<connectedAppClientId>${anypoint.username}</connectedAppClientId>
@@ -58,7 +58,7 @@
 		<dependency>
 			<groupId>org.mule.connectors</groupId>
 			<artifactId>mule-http-connector</artifactId>
-			<version>1.7.3</version>
+			<version>1.9.2</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
 		<dependency>
