--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
 		<app.runtime>4.4.0-20220622</app.runtime>
 		<mule.maven.plugin.version>3.6.3</mule.maven.plugin.version>
 		
-		<anypoint.platform.client_id>${platform.client_id}</anypoint.platform.client_id>
-		<anypoint.platform.client_secret>${platform.client_secret}</anypoint.platform.client_secret>
+		<!-- <anypoint.platform.client_id>${platform.client_id}</anypoint.platform.client_id>
+		<anypoint.platform.client_secret>${platform.client_secret}</anypoint.platform.client_secret> -->
 	</properties>
 
 	<build>
@@ -38,12 +38,13 @@
 						<muleVersion>4.4.0</muleVersion>
 						<!-- <username>${anypoint.username}</username>
 						<password>${anypoint.password}</password>-->
-						<connectedAppClientId>${anypoint.username}</connectedAppClientId>
-						<connectedAppClientSecret>${anypoint.password}</connectedAppClientSecret>
+						<connectedAppClientId>e5f1cab2df6d443288335b0f022ce2fc</connectedAppClientId>
+						<connectedAppClientSecret>5266F45ff17b4C999f585ebF1Baff332</connectedAppClientSecret>
 						<connectedAppGrantType>client_credentials</connectedAppGrantType>
-						<applicationName>${appname}</applicationName>
-						<environment>${env}</environment>
-						<workers>1</workers>
+						<applicationName>mvn-app-1</applicationName>
+						<environment>dev</environment>
+						<region>us-east-2</region>
+						<workers>1</workers>						
 						<workerType>MICRO</workerType>
 						<properties>
 							<key>value</key>
