--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
 		<app.runtime>4.4.0-20220622</app.runtime>
 		<mule.maven.plugin.version>3.6.3</mule.maven.plugin.version>
 		
-		<!-- <anypoint.platform.client_id>${platform.client_id}</anypoint.platform.client_id>
-		<anypoint.platform.client_secret>${platform.client_secret}</anypoint.platform.client_secret> -->
+		<anypoint.platform.client_id>cd16e0b429404bf9af39670d12f65754</anypoint.platform.client_id>
+		<anypoint.platform.client_secret>8bC03b14aA5948d8b13813Af998B3cbF</anypoint.platform.client_secret>
 	</properties>
 
 	<build>
@@ -38,11 +38,11 @@
 						<muleVersion>4.4.0</muleVersion>
 						<!-- <username>${anypoint.username}</username>
 						<password>${anypoint.password}</password>-->
-						<connectedAppClientId>e5f1cab2df6d443288335b0f022ce2fc</connectedAppClientId>
-						<connectedAppClientSecret>5266F45ff17b4C999f585ebF1Baff332</connectedAppClientSecret>
+						<connectedAppClientId>${anypoint.username}</connectedAppClientId>
+						<connectedAppClientSecret>${anypoint.password}</connectedAppClientSecret>
 						<connectedAppGrantType>client_credentials</connectedAppGrantType>
-						<applicationName>mvn-app-1</applicationName>
-						<environment>dev</environment>
+						<applicationName>${appname}</applicationName>
+						<environment>${env}</environment>
 						<region>us-east-2</region>
 						<workers>1</workers>						
 						<workerType>MICRO</workerType>
