--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -10,5 +10,5 @@ on:
 
 jobs:
   call-workflow:
-    uses: GayathriNuthalapati/algolia-api/.github/workflows/reusableWorkflow.yml@dev
+    uses: GayathriNuthalapati/algolia-api/.github/workflows/reusableWorkflow.yml@demo
     secrets: inherit
