--- a/.github/workflows/reusableWorkflow.yml
+++ b/.github/workflows/reusableWorkflow.yml
@@ -56,7 +56,7 @@ jobs:
       env:
         USERNAME: ${{ secrets.connected_app_client_id }}
         PASSWORD: ${{ secrets.connected_app_client_secret}}
-        KEY: ${{ secrets.decryption_key }}
+        KEY: ${{ secrets.key }}
       run: |
         artifactName=$(ls *.jar | head -1)
         mvn deploy -DmuleDeploy \
@@ -87,7 +87,7 @@ jobs:
       env:
         USERNAME: ${{ secrets.connected_app_client_id }}
         PASSWORD: ${{ secrets.connected_app_client_secret}}
-        KEY: ${{ secrets.decryption_key }}
+        KEY: ${{ secrets.key }}
       run: |
         artifactName=$(ls *.jar | head -1)
         mvn deploy -DmuleDeploy \
@@ -118,7 +118,7 @@ jobs:
       env:
         USERNAME: ${{ secrets.connected_app_client_id }}
         PASSWORD: ${{ secrets.connected_app_client_secret}}
-        KEY: ${{ secrets.decryption_key }}
+        KEY: ${{ secrets.key }}
       run: |
         artifactName=$(ls *.jar | head -1)
         mvn deploy -DmuleDeploy \
