--- a/.github/workflows/reusableWorkflow.yml
+++ b/.github/workflows/reusableWorkflow.yml
@@ -54,8 +54,8 @@ jobs:
         name: artifacts
     - name: Deploy to dev
       env:
-        USERNAME: ${{ secrets.connected_app_client_id }}
-        PASSWORD: ${{ secrets.connected_app_client_secret}}
+        USERNAME: ${{ secrets.anypoint_platform_username}}
+        PASSWORD: ${{ secrets.anypoint_platform_password}}
         KEY: ${{ secrets.decryption_key }}
       run: |
         artifactName=$(ls *.jar | head -1)
@@ -85,8 +85,8 @@ jobs:
         name: artifacts
     - name: Deploy to qa
       env:
-        USERNAME: ${{ secrets.connected_app_client_id }}
-        PASSWORD: ${{ secrets.connected_app_client_secret}}
+        USERNAME: ${{ secrets.anypoint_platform_username}}
+        PASSWORD: ${{ secrets.anypoint_platform_password}}
         KEY: ${{ secrets.decryption_key }}
       run: |
         artifactName=$(ls *.jar | head -1)
@@ -116,8 +116,8 @@ jobs:
         name: artifacts
     - name: Deploy to prod
       env:
-        USERNAME: ${{ secrets.connected_app_client_id }}
-        PASSWORD: ${{ secrets.connected_app_client_secret}}
+        USERNAME: ${{ secrets.anypoint_platform_username}}
+        PASSWORD: ${{ secrets.anypoint_platform_password}}
         KEY: ${{ secrets.decryption_key }}
       run: |
         artifactName=$(ls *.jar | head -1)
