--- a/src/main/resources/properties/dev-config.yaml
+++ b/src/main/resources/properties/dev-config.yaml
@@ -3,4 +3,10 @@ api:
 platform:
   client_id: "![0FHei9kXx+sOncppCCnotURcr2pEXs5i9gsAP6geJXsXa+YhXG75YA==]"
   client_secret: "![nhRSoSXeHsts94ntwvwqX57sy9udGLI5KGK1JJtzKIuaqLblPhyBNw==]"
-env: "dev"
+  
+mule.env: "dev"
+
+salesforce:
+  username: "![foKQrVSLEOjELQMJQyBlyhLg4YeStOrC7s3ShEPVyhc=]"
+  password: "![LBlKW5jyrFChQdxwstwzrw==]"
+  token: "![5bZKLspbo6bFbcO1Z61cDKQc+Sd2Od+35BNwQohijFk=]"
