--- a/src/main/resources/properties/qa-config.yaml
+++ b/src/main/resources/properties/qa-config.yaml
@@ -3,4 +3,10 @@ api:
 platform:
   client_id: "![S17BUxpDBvix6g64MP2ZGLUnCeA7unO56b/dTKbo6KX2MOvhMfBPWQ==]"
   client_secret: "![8mRhJqMvmgeAeUlZAbRuMYQy2siX6vo/VpAtEv7ZWEt1WbZBJ4PzIQ==]"
-env: "qa"
+  
+mule.env: "qa"
+
+salesforce:
+  username: "![foKQrVSLEOjELQMJQyBlyhLg4YeStOrC7s3ShEPVyhc=]"
+  password: "![LBlKW5jyrFChQdxwstwzrw==]"
+  token: "![5bZKLspbo6bFbcO1Z61cDKQc+Sd2Od+35BNwQohijFk=]"
