--- a/pom.xml
+++ b/pom.xml
@@ -45,13 +45,13 @@
 					<cloudHubDeployment>
 						<uri>https://anypoint.mulesoft.com</uri>
 						<muleVersion>4.4.0</muleVersion>
-						<username>${anypoint.username}</username>
-						<password>${anypoint.password}</password>
-						<!-- <connectedAppClientId>e5f1cab2df6d443288335b0f022ce2fc</connectedAppClientId> 
-							<connectedAppClientSecret>5266F45ff17b4C999f585ebF1Baff332</connectedAppClientSecret> 
-							<connectedAppGrantType>client_credentials</connectedAppGrantType> -->
-						<applicationName>mvn-app-222</applicationName>
-						<environment>dev</environment>
+						<!-- <username>${anypoint.username}</username>
+						<password>${anypoint.password}</password> -->
+						<connectedAppClientId>${anypoint.username}</connectedAppClientId> 
+						<connectedAppClientSecret>${anypoint.password}</connectedAppClientSecret> 
+						<connectedAppGrantType>client_credentials</connectedAppGrantType>
+						<applicationName>mvn-app-1</applicationName>
+						<environment>${env}</environment>
 						<region>us-east-2</region>
 						<workers>1</workers>
 						<workerType>MICRO</workerType>
